# dungeon

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  build.sh  build_win.sh  release.sh  release_win.sh  setup.sh  windows_toolchain.cmake
.github/workflows/: build-debian-12.yml  build-debian-13.yml  build-ubuntu-22.04.yml  build-ubuntu-24.04.yml  build-windows-mingw.yml
core/: app.cpp  app.h  console.cpp  console.h  display.cpp  display.h  layout.h  level.cpp  level.h  mode.h  renderer.cpp  renderer.h  tiles.cpp  tiles.h
docs/: editor layout.txt  minimum-resolution.txt  settings layout.txt
editor/: editor_controls.cpp  editor_mode.cpp  editor_mode.h  editor_panel.cpp  editor_panel.h  editor_state.h
game/: game_controls.cpp  game_mode.cpp  game_mode.h  game_panel.cpp  game_panel.h  game_state.h  interactions.cpp  interactions.h
settings/: settings_mode.cpp  settings_mode.h  settings_panel.cpp  settings_panel.h
world/: LEVEL--1-00-00.json  LEVEL-00-00-00.json
